--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,15 @@
 .vscode/**
-.vscode-test/**
+.github/**
+.gitlab/**
+**/*.ts
+**/*.map
 .gitignore
-node_modules
-out/
-client
-server
-tsconfig.json
-webpack.config.js
+**/tsconfig.json
+**/tsconfig.base.json
+**/tslint.json
+.azure-pipelines.yml
+shared.webpack.config.js
+client/**
+!client/out/extension.js
+server/**
+!server/out/server.js
